<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="My Nanodegree Apps!"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1_text"
        android:id="@+id/button1"
        android:layout_marginTop="52dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:minWidth="250dp"
        android:minHeight="60dp"
        style="?android:attr/borderlessButtonStyle"
        android:background="#F08C35"
        android:onClick="showToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2_text"
        android:id="@+id/button2"
        android:layout_marginTop="15dp"
        android:minWidth="250dp"
        android:minHeight="60dp"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        style="?android:attr/borderlessButtonStyle"
        android:background="#F08C35"
        android:onClick="showToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button3_text"
        android:id="@+id/button3"
        android:layout_marginTop="15dp"
        android:minWidth="250dp"
        android:minHeight="60dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        style="?android:attr/borderlessButtonStyle"
        android:background="#F08C35"
        android:onClick="showToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button4_text"
        android:id="@+id/button4"
        android:layout_marginTop="15dp"
        android:minWidth="250dp"
        android:minHeight="60dp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        style="?android:attr/borderlessButtonStyle"
        android:background="#F08C35"
        android:onClick="showToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button5_text"
        android:id="@+id/button5"
        android:layout_marginTop="15dp"
        android:minWidth="250dp"
        android:minHeight="60dp"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        style="?android:attr/borderlessButtonStyle"
        android:background="#F08C35"
        android:onClick="showToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button6_text"
        android:id="@+id/button6"
        android:layout_marginTop="15dp"
        android:minWidth="250dp"
        android:minHeight="60dp"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        style="?android:attr/borderlessButtonStyle"
        android:background="#FF0000"
        android:textColor="#FFFFFF"
        android:onClick="showToast" />

</RelativeLayout>
